# Null-gravity

./: .env.template  .gitignore  README.md
cli/: package-lock.json  package.json
cli/src/: claim.ts  deposit.ts  index.ts  status.ts  withdraw.ts
cli/src/scripts/: debug_accounts.js  debug_api.js  debug_api.ts  deploy_l2.js  verify_contract.js  verify_contract.ts
contracts/l1/: foundry.toml
contracts/l1/script/: Deploy.s.sol
contracts/l1/src/: BLSVerifier.sol  Inbox.sol  ServiceManager.sol
contracts/l1/src/interfaces/: IBLSVerifier.sol  IInbox.sol  IServiceManager.sol
contracts/l1/test/: ServiceManager.t.sol
contracts/l1/test/mocks/: MockInbox.sol
contracts/l2/: Nargo.toml
contracts/l2/src/: main.nr
docker/: docker-compose.testnet.yml  docker-compose.yml  lightwalletd.conf  zebrad.toml
docker/scripts/: setup-vault.sh  wait-for-services.sh
docs/: testnet-deployment.md
scripts/: e2e-test.sh  integration-test.sh
sentinel/: Cargo.toml  Dockerfile
sentinel/src/: config.rs  error.rs  main.rs  memo.rs  scanner.rs  signer.rs
