[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Null-Gravity Bridge"]
description = "Zcash chain watcher and attestation signer for the Zcash-Aztec Bridge"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Zcash libraries
zcash_client_backend = "0.10"
zcash_primitives = "0.13"
zcash_proofs = "0.13"

# gRPC for lightwalletd
tonic = "0.10"
prost = "0.12"

# Ethereum interaction
ethers = { version = "2.0", features = ["rustls", "ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
hex = "0.4"
sha2 = "0.10"

# Utilities
async-trait = "0.1"
futures = "0.3"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "sentinel"
path = "src/main.rs"
